# ModelBench

./: README.md  readme.md
modelbench-backend/: ModelBench.py  modelbench.py
modelbench-docker/: Dockerfile  README_ModelBench.md  pyproject.toml  readme.md
modelbench-docker.old/: docker-compose.yml  requirements.txt
modelbench-docker/modelbench-backend/: pyproject.toml
modelbench-docker/modelbench-docker/: docker-compose.yml
modelbench-ui/: readme.md
modelbench-ui/app/: globals.css  layout.tsx  page.tsx  types.ts
modelbench-ui/app/components/: Footer.tsx  Header.tsx  IndustryUseCases.tsx  ModelOutputGrid.tsx  Navigation.tsx  PromptPanel.tsx  PromptSection.tsx  ResultsGrid.tsx  SidePanel.tsx
