#pyproject.toml (replaces requirements.txt for modern Python projects)
#
[tool.poetry]
name = "modelbench"
version = "1.1.0"
description = "Multi-LLM Comparison API"
authors = ["Your Name <you@example.com>"]
#
[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
gunicorn = "^22.0.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
pydantic = {extras = ["email"], version = "^2.7.4"}
pydantic-settings = "^2.3.4"
loguru = "^0.7.2"
slowapi = "^0.1.9"